First Purchase Link update Added links to pieces with prints avialable on INPRINT Added javascript to facilitate showing pruchase links when applicable Added Instagram link to nav Updated Copyright year Added 2 new gallery pieces Updated 1 existing gallery piece Tweaked Nav spacing

--- a/about.html
+++ b/about.html
@@ -34,6 +34,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div id="PageLinks">
             <a href="portfolio.html">Portfolio</a>
             <a class="aboutLink" href="about.html">About</a>
+            <a href="https://www.instagram.com/amandamorleymiller/?igsh=dXUwazBrcDhucWx3" target="_blank">
+                <img id="insta" src="images/Insta.svg">
+            </a>
         </div>
     </nav>
     <div id="about-mainContent" class="mainContent">
