--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div id="PageLinks">
             <a href="portfolio.html">Portfolio</a>
             <a href="about.html">About</a>
+            <a href="https://www.instagram.com/amandamorleymiller/?igsh=dXUwazBrcDhucWx3" target="_blank">
+                <img id="insta" src="images/Insta.svg">
+            </a>
         </div>
     </nav>
     <div id="home-mainContent" class="mainContent">
@@ -199,7 +202,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     (min-width: 1500px) and (min-resolution: 2ppx) 15.92vw"
             alt="">
     </div>
-    <footer><div>&#169;2020 Amanda Morley</div></footer>
+    <footer><div>&#169;2024 Amanda Morley</div></footer>
 </body>
 </html>
 
