--- a/portfolio.html
+++ b/portfolio.html
@@ -18,11 +18,11 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WSYJ430RY6"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'G-WSYJ430RY6');
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-WSYJ430RY6');
     </script>
 </head>
 <body class="portfolioPage">
@@ -32,7 +32,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <section id="image-details">
         <header>
-            <div id="image-title">placeholder title</div>
+            <div id="header-copy">
+                <div id="image-title">placeholder title</div>
+                <div class="hide" id="purchase-link">
+                    <a href="#" target="_blank">Pruchase a print from INPRINT.</a>
+                </div>
+            </div>
             <div id="closebox"></div>
         </header>
             <div id="previewArea">
@@ -70,9 +75,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <!-- <img class="hitbox" id="previousButtonImage" src="images/gallery/arrow.svg" alt="previous image button"> -->
                 </div>
                 <div id="image-display">
-            	    <div id="image-container">
-            	        <img id="image-image" draggable="true">
-            	    </div>
+                    <div id="image-container">
+                        <img id="image-image" draggable="true">
+                    </div>
                 </div>
                 <div id="nextButtonArea">
                     <svg id="nextButtonImage" class="hitbox">
@@ -88,6 +93,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div id="PageLinks">
             <a class="portfolioLink" href="portfolio.html">Portfolio</a>
             <a href="about.html">About</a>
+            <a href="https://www.instagram.com/amandamorleymiller/?igsh=dXUwazBrcDhucWx3" target="_blank">
+                <img id="insta" src="images/Insta.svg">
+            </a>
         </div>
     </nav>
     <section id="portfolio-mainContent" class="mainContent">
@@ -99,7 +107,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="instructions">Click images to enlarge.</div>
         <div class="gallery  showingGallery" id="new-gallery">
             <div class="galleryImages">
-                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Illumination.jpg" data-image-name="Illumination" data-append="Illumination">
+                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Illumination.jpg" data-image-name="Illumination" data-append="Illumination" data-shop-link="https://www.inprnt.com/gallery/amandamorley/illumination/">
                     <picture>
                         <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/Illumination_xsmall_thumb.jpg">
                         <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/Illumination_medium_thumb.jpg">
@@ -112,7 +120,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <img src="images/gallery/thumbs/Portfolio/Illumination_xsmall_thumb.jpg" alt="Illumination Thumbnail">
                     </picture>
                 </div>
-                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Garden.jpg" data-image-name="The Garden" data-append="The_Garden">
+                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Garden.jpg" data-image-name="The Garden" data-append="The_Garden" data-shop-link="https://www.inprnt.com/gallery/amandamorley/the-garden/">
                     <picture>
                         <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/Garden_xsmall_thumb.jpg">
                         <source media="(min-width: 768px) and (max-width: 1199px)" srcset="images/gallery/thumbs/Portfolio/Garden_medium_thumb.jpg">
@@ -125,7 +133,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <img src="images/gallery/thumbs/Portfolio/Garden_xsmall_thumb.jpg" alt="The Garden Thumbnail">
                     </picture>
                 </div>
-                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Remains.jpg" data-image-name="Remains" data-append="Remains">
+                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Remains.jpg" data-image-name="Remains" data-append="Remains" data-shop-link="https://www.inprnt.com/gallery/amandamorley/remains/">
                     <picture>
                         <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/Remains_xsmall_thumb.jpg">
                         <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/Remains_medium_thumb.jpg">
@@ -190,7 +198,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <img src="images/gallery/thumbs/Portfolio/Myth_xsmall_thumb.jpg" alt="Myth Thumbnail">
                     </picture>
                 </div>
-                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Offering.jpg" data-image-name="The Offering" data-append="The_Offering">
+                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Offering.jpg" data-image-name="The Offering" data-append="The_Offering" data-shop-link="https://www.inprnt.com/gallery/amandamorley/the-offering/">
                     <picture>
                         <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/Offering_xsmall_thumb.jpg">
                         <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/Offering_medium_thumb.jpg">
@@ -294,7 +302,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <img src="images/gallery/thumbs/Portfolio/Beneath_the_Boughs_xsmall_thumb.jpg" alt="Beneath the Boughs Thumbnail">
                     </picture>
                 </div>
-                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Ritual.jpg" data-image-name="Ritual" data-append="Ritual">
+                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Ritual.jpg" data-image-name="Ritual" data-append="Ritual" data-shop-link="https://www.inprnt.com/gallery/amandamorley/ritual/">
                     <picture>
                         <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/Ritual_xsmall_thumb.jpg">
                         <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/Ritual_medium_thumb.jpg">
@@ -333,7 +341,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <img src="images/gallery/thumbs/Portfolio/Provenance_xsmall_thumb.jpg" alt="Provenance Thumbnail">
                     </picture>
                 </div>
-                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Despoilment.jpg" data-image-name="Despoilment" data-append="Despoilment">
+                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Despoilment.jpg" data-image-name="Despoilment" data-append="Despoilment" data-shop-link="https://www.inprnt.com/gallery/amandamorley/despoilment/">
                     <picture>
                         <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/Despoilment_xsmall_thumb.jpg">
                         <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/Despoilment_medium_thumb.jpg">
@@ -346,7 +354,33 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <img src="images/gallery/thumbs/Portfolio/Despoilment_xsmall_thumb.jpg" alt="Despoilment Thumbnail">
                     </picture>
                 </div>
-                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Of_Blossoms_and_Blight.jpg" data-image-name="Of Blossoms and Blight" data-append="Of_Blossoms_and_Blight">
+                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Asunder.jpg" data-image-name="Asunder" data-append="Asunder" data-shop-link="https://www.inprnt.com/gallery/amandamorley/asunder/">
+                    <picture>
+                        <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/Asunder_xsmall_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/Asunder_medium_thumb.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px)" srcset="images/gallery/thumbs/Portfolio/Asunder_large_thumb.jpg">
+                        <source media="(min-width: 1500px)" srcset="images/gallery/thumbs/Portfolio/Asunder_xlarge_thumb.jpg">
+                        <source media="(max-width: 767px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Asunder_xlarge_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Asunder_medium_thumb_2x.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Asunder_large_thumb_2x.jpg">
+                        <source media="(min-width: 1500px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Asunder_xlarge_thumb_2x.jpg">
+                        <img src="images/gallery/thumbs/Portfolio/Asunder_xsmall_thumb.jpg" alt="Asunder Thumbnail">
+                    </picture>
+                </div>
+                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Hubris.jpg" data-image-name="Hubris" data-append="Hubris">
+                    <picture>
+                        <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/Hubris_xsmall_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/Hubris_medium_thumb.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px)" srcset="images/gallery/thumbs/Portfolio/Hubris_large_thumb.jpg">
+                        <source media="(min-width: 1500px)" srcset="images/gallery/thumbs/Portfolio/Hubris_xlarge_thumb.jpg">
+                        <source media="(max-width: 767px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Hubris_xlarge_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Hubris_medium_thumb_2x.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Hubris_large_thumb_2x.jpg">
+                        <source media="(min-width: 1500px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Hubris_xlarge_thumb_2x.jpg">
+                        <img src="images/gallery/thumbs/Portfolio/Hubris_xsmall_thumb.jpg" alt="Hubris Thumbnail">
+                    </picture>
+                </div>
+                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Of_Blossoms_and_Blight.jpg" data-image-name="Of Blossoms and Blight" data-append="Of_Blossoms_and_Blight" data-shop-link="https://www.inprnt.com/gallery/amandamorley/of-blossoms-and-blight/">
                     <picture>
                         <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/Of_Blossoms_and_Blight_xsmall_thumb.jpg">
                         <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/Of_Blossoms_and_Blight_medium_thumb.jpg">
