Adding shop link and associated script to portfolio page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div id="header-copy">
                 <div id="image-title">placeholder title</div>
                 <div class="hide" id="purchase-link">
-                    <a href="#" target="_blank">Pruchase a print from INPRINT.</a>
+                    <a href="#" target="_blank">Pruchase a print from INPRNT.</a>
                 </div>
             </div>
             <div id="closebox"></div>
@@ -104,7 +104,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <a data-gallery="published-gallery" href="javascript:">Published Work</a>
             <a data-gallery="early-gallery" href="javascript:">Early Work</a>
         </div> 
-        <div class="instructions">Click images to enlarge.</div>
+        <div id="galleryLabels">
+            <div id="shopLink">
+                <a href="https://www.inprnt.com/gallery/amandamorley/" target="_blank">Prints of select works are available from INPRNT.</a>
+            </div>
+            <div class="instructions">Click images to enlarge.</div>
+        </div>
         <div class="gallery  showingGallery" id="new-gallery">
             <div class="galleryImages">
                 <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Illumination.jpg" data-image-name="Illumination" data-append="Illumination" data-shop-link="https://www.inprnt.com/gallery/amandamorley/illumination/">
