--- a/about.html
+++ b/about.html
@@ -41,16 +41,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </nav>
     <div id="about-mainContent" class="mainContent">
         <div id="about-content-container">
-            <div id="email-link">Email: <a href="mailto:amandamorley@amandamorley.com">amandamorley@amandamorley.com</a></div>
             <div id="bio">
                 <div id="bioContent">
                     <div id="profile-picture">
                         <img src="images\about\ProfilePic.jpg" alt="">
                     </div>
                     <div id="bioText">
-                        <p>Hello there! I’m a freelance illustrator and graduate of the Columbus College of Art and Design. For the past decade, I’ve happily illustrated the recurring segment “Ask Arizona” for <span style="font-weight: bold;">Highlights</span> magazine. In my personal work, I like to explore the subtle relationships between nature, philosophy, mythology, and the life cycle.</p>
-    
-                        <p>I live just outside of Columbus, Ohio with my husband, our two tiny humans, two geriatric cats, and a frisky puppy dog named Penny.</p>
+                        <p>Hello there! I’m a freelance illustrator and graduate of the Columbus College of Art and Design. You may have seen my work on the cover and interior of <b>Highlights</b> magazine. In my personal work, I like to explore the subtle relationships between nature, philosophy, mythology, and the life cycle.</p>
+                        <p>I live just outside of Columbus, Ohio with my husband, our two awesome kids, two cats, and a puppy dog named Penny.</p>
+                        <div id="email-link">Email: <a href="mailto:amandamorley@amandamorley.com">amandamorley@amandamorley.com</a></div>
                     </div>
                 </div>
             </div>
