Adding 7 new images As It All Ends Belladonna Lullaby In Our Absence Midwinter Sunlit Darkness The Dance The Night Gardener

--- a/portfolio.html
+++ b/portfolio.html
@@ -112,6 +112,97 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div class="gallery  showingGallery" id="new-gallery">
             <div class="galleryImages">
+                <div class="galleryImage" id="TheDance" data-image-file="images/gallery/large/portfolio/TheDance.jpg" data-image-name="The Dance" data-append="TheDance" data-shop-link="https://www.inprnt.com/gallery/amandamorley/the-dance/">
+                    <picture>
+                        <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/TheDance_xsmall_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/TheDance_medium_thumb.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (max-width: 1499px)" srcset="images/gallery/thumbs/Portfolio/TheDance_large_thumb.jpg">
+                        <source media="(min-width: 1500px)" srcset="images/gallery/thumbs/Portfolio/TheDance_xlarge_thumb.jpg">
+                        <source media="(max-width: 767px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/TheDance_xlarge_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/TheDance_medium_thumb_2x.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/TheDance_large_thumb_2x.jpg">
+                        <source media="(min-width: 1500px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/TheDance_xlarge_thumb_2x.jpg">
+                        <img src="images/gallery/thumbs/Portfolio/TheDance_xsmall_thumb.jpg" alt="The Dance Thumbnail">
+                    </picture>
+                </div>
+                <div class="galleryImage" id="SunlitDarkness" data-image-file="images/gallery/large/portfolio/SunlitDarkness.jpg" data-image-name="Sunlit Darkness" data-append="SunlitDarkness" data-shop-link="https://www.inprnt.com/gallery/amandamorley/sunlit-darkness/">
+                    <picture>
+                        <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/SunlitDarkness_xsmall_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/SunlitDarkness_medium_thumb.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (max-width: 1499px)" srcset="images/gallery/thumbs/Portfolio/SunlitDarkness_large_thumb.jpg">
+                        <source media="(min-width: 1500px)" srcset="images/gallery/thumbs/Portfolio/SunlitDarkness_xlarge_thumb.jpg">
+                        <source media="(max-width: 767px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/SunlitDarkness_xlarge_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/SunlitDarkness_medium_thumb_2x.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/SunlitDarkness_large_thumb_2x.jpg">
+                        <source media="(min-width: 1500px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/SunlitDarkness_xlarge_thumb_2x.jpg">
+                        <img src="images/gallery/thumbs/Portfolio/SunlitDarkness_xsmall_thumb.jpg" alt="Sunlit Darkness Thumbnail">
+                    </picture>
+                </div>
+                <div class="galleryImage" id="AsItAllEnds" data-image-file="images/gallery/large/portfolio/AsItAllEnds.jpg" data-image-name="As It All Ends" data-append="AsItAllEnds" data-shop-link="https://www.inprnt.com/gallery/amandamorley/as-it-all-ends/">
+                    <picture>
+                        <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/AsItAllEnds_xsmall_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/AsItAllEnds_medium_thumb.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (max-width: 1499px)" srcset="images/gallery/thumbs/Portfolio/AsItAllEnds_large_thumb.jpg">
+                        <source media="(min-width: 1500px)" srcset="images/gallery/thumbs/Portfolio/AsItAllEnds_xlarge_thumb.jpg">
+                        <source media="(max-width: 767px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/AsItAllEnds_xlarge_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/AsItAllEnds_medium_thumb_2x.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/AsItAllEnds_large_thumb_2x.jpg">
+                        <source media="(min-width: 1500px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/AsItAllEnds_xlarge_thumb_2x.jpg">
+                        <img src="images/gallery/thumbs/Portfolio/AsItAllEnds_xsmall_thumb.jpg" alt="As It All Ends Thumbnail">
+                    </picture>
+                </div>
+                <div class="galleryImage" id="InOurAbsence" data-image-file="images/gallery/large/portfolio/InOurAbsence.jpg" data-image-name="In Our Absence" data-append="InOurAbsence" data-shop-link="https://www.inprnt.com/gallery/amandamorley/in-our-absence/">
+                    <picture>
+                        <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/InOurAbsence_xsmall_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/InOurAbsence_medium_thumb.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (max-width: 1499px)" srcset="images/gallery/thumbs/Portfolio/InOurAbsence_large_thumb.jpg">
+                        <source media="(min-width: 1500px)" srcset="images/gallery/thumbs/Portfolio/InOurAbsence_xlarge_thumb.jpg">
+                        <source media="(max-width: 767px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/InOurAbsence_xlarge_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/InOurAbsence_medium_thumb_2x.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/InOurAbsence_large_thumb_2x.jpg">
+                        <source media="(min-width: 1500px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/InOurAbsence_xlarge_thumb_2x.jpg">
+                        <img src="images/gallery/thumbs/Portfolio/InOurAbsence_xsmall_thumb.jpg" alt="In Our Absence Thumbnail">
+                    </picture>
+                </div>
+                <div class="galleryImage" id="Midwinter" data-image-file="images/gallery/large/portfolio/Midwinter.jpg" data-image-name="Midwinter" data-append="Midwinter" data-shop-link="https://www.inprnt.com/gallery/amandamorley/midwinter/">
+                    <picture>
+                        <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/Midwinter_xsmall_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/Midwinter_medium_thumb.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (max-width: 1499px)" srcset="images/gallery/thumbs/Portfolio/Midwinter_large_thumb.jpg">
+                        <source media="(min-width: 1500px)" srcset="images/gallery/thumbs/Portfolio/Midwinter_xlarge_thumb.jpg">
+                        <source media="(max-width: 767px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Midwinter_xlarge_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Midwinter_medium_thumb_2x.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Midwinter_large_thumb_2x.jpg">
+                        <source media="(min-width: 1500px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Midwinter_xlarge_thumb_2x.jpg">
+                        <img src="images/gallery/thumbs/Portfolio/Midwinter_xsmall_thumb.jpg" alt="Midwinter Thumbnail">
+                    </picture>
+                </div>
+                <div class="galleryImage" id="BelladonnaLullaby" data-image-file="images/gallery/large/portfolio/BelladonnaLullaby.jpg" data-image-name="Belladonna Lullaby" data-append="BelladonnaLullaby" data-shop-link="https://www.inprnt.com/gallery/amandamorley/belladonna-lullaby/">
+                    <picture>
+                        <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/BelladonnaLullaby_xsmall_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/BelladonnaLullaby_medium_thumb.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (max-width: 1499px)" srcset="images/gallery/thumbs/Portfolio/BelladonnaLullaby_large_thumb.jpg">
+                        <source media="(min-width: 1500px)" srcset="images/gallery/thumbs/Portfolio/BelladonnaLullaby_xlarge_thumb.jpg">
+                        <source media="(max-width: 767px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/BelladonnaLullaby_xlarge_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/BelladonnaLullaby_medium_thumb_2x.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/BelladonnaLullaby_large_thumb_2x.jpg">
+                        <source media="(min-width: 1500px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/BelladonnaLullaby_xlarge_thumb_2x.jpg">
+                        <img src="images/gallery/thumbs/Portfolio/BelladonnaLullaby_xsmall_thumb.jpg" alt="Belladonna Lullaby Thumbnail">
+                    </picture>
+                </div>
+                <div class="galleryImage" id="TheNightGardener" data-image-file="images/gallery/large/portfolio/TheNightGardener.jpg" data-image-name="The Night Gardener" data-append="TheNightGardener" data-shop-link="https://www.inprnt.com/gallery/amandamorley/the-night-gardener/">
+                    <picture>
+                        <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/TheNightGardener_xsmall_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/TheNightGardener_medium_thumb.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (max-width: 1499px)" srcset="images/gallery/thumbs/Portfolio/TheNightGardener_large_thumb.jpg">
+                        <source media="(min-width: 1500px)" srcset="images/gallery/thumbs/Portfolio/TheNightGardener_xlarge_thumb.jpg">
+                        <source media="(max-width: 767px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/TheNightGardener_xlarge_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/TheNightGardener_medium_thumb_2x.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/TheNightGardener_large_thumb_2x.jpg">
+                        <source media="(min-width: 1500px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/TheNightGardener_xlarge_thumb_2x.jpg">
+                        <img src="images/gallery/thumbs/Portfolio/TheNightGardener_xsmall_thumb.jpg" alt="The Night Gardener Thumbnail">
+                    </picture>
+                </div>
                 <div class="galleryImage" id="Illumination" data-image-file="images/gallery/large/portfolio/Illumination.jpg" data-image-name="Illumination" data-append="Illumination" data-shop-link="https://www.inprnt.com/gallery/amandamorley/illumination/">
                     <picture>
                         <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/Illumination_xsmall_thumb.jpg">
