--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div id="header-copy">
                 <div id="image-title">placeholder title</div>
                 <div class="hide" id="purchase-link">
-                    <a href="#" target="_blank">Pruchase a print from INPRNT.</a>
+                    <a href="#" target="_blank">Purchase a print from INPRNT.</a>
                 </div>
             </div>
             <div id="closebox"></div>
