Renamed Image and associated files

--- a/portfolio.html
+++ b/portfolio.html
@@ -125,17 +125,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <img src="images/gallery/thumbs/Portfolio/TheDance_xsmall_thumb.jpg" alt="The Dance Thumbnail">
                     </picture>
                 </div>
-                <div class="galleryImage" id="SunlitDarkness" data-image-file="images/gallery/large/portfolio/SunlitDarkness.jpg" data-image-name="Sunlit Darkness" data-append="SunlitDarkness" data-shop-link="https://www.inprnt.com/gallery/amandamorley/sunlit-darkness/">
+                <div class="galleryImage" id="InSunlight" data-image-file="images/gallery/large/portfolio/InSunlight.jpg" data-image-name="In Sunlight" data-append="InSunlight" data-shop-link="https://www.inprnt.com/gallery/amandamorley/sunlit-darkness/">
                     <picture>
-                        <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/SunlitDarkness_xsmall_thumb.jpg">
-                        <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/SunlitDarkness_medium_thumb.jpg">
-                        <source media="(min-width:1200px) and (max-width: 1499px) and (max-width: 1499px)" srcset="images/gallery/thumbs/Portfolio/SunlitDarkness_large_thumb.jpg">
-                        <source media="(min-width: 1500px)" srcset="images/gallery/thumbs/Portfolio/SunlitDarkness_xlarge_thumb.jpg">
-                        <source media="(max-width: 767px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/SunlitDarkness_xlarge_thumb.jpg">
-                        <source media="(min-width: 768px) and (max-width:1199px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/SunlitDarkness_medium_thumb_2x.jpg">
-                        <source media="(min-width:1200px) and (max-width: 1499px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/SunlitDarkness_large_thumb_2x.jpg">
-                        <source media="(min-width: 1500px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/SunlitDarkness_xlarge_thumb_2x.jpg">
-                        <img src="images/gallery/thumbs/Portfolio/SunlitDarkness_xsmall_thumb.jpg" alt="Sunlit Darkness Thumbnail">
+                        <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/InSunlight_xsmall_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/InSunlight_medium_thumb.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (max-width: 1499px)" srcset="images/gallery/thumbs/Portfolio/InSunlight_large_thumb.jpg">
+                        <source media="(min-width: 1500px)" srcset="images/gallery/thumbs/Portfolio/InSunlight_xlarge_thumb.jpg">
+                        <source media="(max-width: 767px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/InSunlight_xlarge_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/InSunlight_medium_thumb_2x.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/InSunlight_large_thumb_2x.jpg">
+                        <source media="(min-width: 1500px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/InSunlight_xlarge_thumb_2x.jpg">
+                        <img src="images/gallery/thumbs/Portfolio/InSunlight_xsmall_thumb.jpg" alt="In Sunlight Thumbnail">
                     </picture>
                 </div>
                 <div class="galleryImage" id="AsItAllEnds" data-image-file="images/gallery/large/portfolio/AsItAllEnds.jpg" data-image-name="As It All Ends" data-append="AsItAllEnds" data-shop-link="https://www.inprnt.com/gallery/amandamorley/as-it-all-ends/">
